Fix all Sonar findings; add JaCoCo; fix admin 4xx returning 403
Java (SonarQube Community, same analyzers as SonarLint): 35 -> 0 issues
- S4684: stop exposing the persistent Client entity to controllers; use an
  AuthenticatedClient record as the request principal
- S107: IngestService.submit takes a SubmitCommand record (9 params -> 2)
- S2077: admin message search now uses a JPA Specification (no assembled
  SQL); dashboard binds the date_trunc unit as a parameter
- S4502: CSRF stays off for the stateless header-authenticated admin API,
  documented; 401 entry point no longer sends WWW-Authenticate
- S2142/S2259/S2147/S1905/S1488/S1612: interrupt handling, null-safety,
  merged catches, redundant cast/variable, method references
- S1845: rename RateLimiter.Decision.ALLOWED to GRANTED
- S8786: possessive-quantifier email regex (no ReDoS backtracking)
- S2479/S6213: BOM as char constant; no restricted identifier
- S6878/S135: DispatchConsumers loop restructured, record patterns
- S1192/S3358/S6885: constants, no nested ternary, Math.clamp
- Tests: Awaitility instead of Thread.sleep, single-call lambdas

UI/tooling (Sonar JS/TS/Docker): 29 -> 0 issues
- explicit button types, span-wrapped label text, SubmitEvent, readonly
  props, localeCompare sort, catcher refactor + non-root Dockerfile

Also:
- Fix: admin API returned 403 instead of 400/404/409 because the denyAll
  fallback blocked Boot's /error forward; permit the ERROR dispatch
- Add JaCoCo reporting (measured coverage: 20.5%)

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>