@@ -49,13 +49,14 @@ class DashboardController {
         if (!Map.of("minute", 1, "hour", 1, "day", 1).containsKey(bucket)) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "bucket must be minute, hour or day");
         }
-        return jdbc.query("select date_trunc('" + bucket + "', created_at) b, channel, status, count(*) "
-                        + "from notification_message where created_at >= ? group by b, channel, status order by b",
+        // The bucket unit is bound as a parameter (allow-listed above anyway), so no SQL is assembled from input.
+        return jdbc.query("select date_trunc(?, created_at), channel, status, count(*) "
+                        + "from notification_message where created_at >= ? group by 1, 2, 3 order by 1",
                 (rs, i) -> new Point(rs.getTimestamp(1).toInstant(), rs.getString(2), rs.getString(3), rs.getLong(4)),
-                since(hours));
+                bucket, since(hours));
     }
 
     private static Timestamp since(int hours) {
-        return Timestamp.from(Instant.now().minus(Math.min(Math.max(hours, 1), 24 * 90), ChronoUnit.HOURS));
+        return Timestamp.from(Instant.now().minus(Math.clamp(hours, 1, 24 * 90), ChronoUnit.HOURS));
     }
 }
